<resources>
    <string name="app_name">soad</string>
    <string name="app_full_name">story of a dicoding</string>

    <!--  Page Title  -->
    <string name="page_title_login">Login</string>
    <string name="page_title_register">Create Account</string>

    <!--  Button  -->
    <string name="button_ok">OK</string>

    <!--  Label  -->
    <string name="label_not_have_account">Don\'t have account yet?</string>
    <string name="label_have_account">Do have account?</string>
    <string name="label_create_account">Create account</string>
    <string name="label_sign_in">Sign in</string>

    <string name="label_field_default">Text</string>
    <string name="label_field_email">Email</string>
    <string name="label_field_name">Name</string>
    <string name="label_field_password">Password</string>

    <string name="label_button_sign_in">Sign In</string>
    <string name="label_button_sign_up">Create</string>

    <!--  Error Message  -->
    <string name="error_message_field_cannot_be_empty">%s cannot be empty</string>
    <string name="error_message_field_cannot_be_more_than_limit">%s cannot be more than %d characters</string>
    <string name="error_message_field_cannot_be_less_than_limit">%s cannot be less than %d characters</string>
    <string name="error_message_field_email_is_in_invalid_format">Email is in invalid format</string>

    <!--  Image Description  -->
    <string name="image_splash_logo">App logo in initial page</string>
    <string name="image_login_header">Image of header login</string>
    <string name="image_login_logo">Image of logo header login</string>
    <string name="button_main_add">Button of add story</string>

    <!--  Menu  -->
    <string name="menu_account">Account</string>
    <string name="menu_home">Home</string>

    <!--  Register  -->
    <string name="register_message_error_template">Failed to register a new account, %s</string>
    <string name="register_message_error_something_went_wrong">Something went wrong, please try again later</string>
    <string name="register_message_success">Success to register a new account, go to login page to use your account</string>

    <!--  Login  -->
    <string name="login_message_error_template">Failed to log in, %s</string>
    <string name="login_message_error_something_went_wrong">Something went wrong, please try again later</string>

    <!--  Logout  -->
    <string name="logout_dialog_title">Logout</string>
    <string name="logout_dialog_description">Are you sure want to logout?</string>
    <string name="logout_dialog_primary_label">No</string>
    <string name="logout_dialog_secondary_label">Yes</string>
    <string name="logout_message_error_template">Failed to log out, %s</string>
    <string name="logout_message_error_something_went_wrong">Something went wrong, please try again later</string>

    <!--  Account  -->
    <string name="account_label_logout">Sign Out</string>
</resources>
